--- a/css/styles.css
+++ b/css/styles.css
@@ -143,7 +143,7 @@ ul.social > li a:hover{
 /* Intro
 -------------------------------------------------- */
 .intro{
-  text-align: center;
+  text-align: justify;
   margin-top: 40px;
 }
 .intro h2{
