--- a/css/styles.css
+++ b/css/styles.css
@@ -143,7 +143,7 @@ ul.social > li a:hover{
 /* Intro
 -------------------------------------------------- */
 .intro{
-  text-align: justify;
+  text-align: center;
   margin-top: 40px;
 }
 .intro h2{
@@ -153,6 +153,7 @@ ul.social > li a:hover{
   text-transform: uppercase;
 }
 .intro h3{
+  text-align: justify;
   font-family: PT Sans;
   font-size: 1.5em;
   font-weight: normal;
